<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".BenefitsActivity">

        <include
            android:id="@+id/toolbarBenefits"
            android:text="Benefits Of Blood Donation"
            layout="@layout/toolbar2" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Overview"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits1"/>

        <TextView
            android:id="@+id/txtReadBenefits2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blood Donation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits3"/>

        <TextView
            android:id="@+id/txtReadBenefits4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apheresis"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/benefits5"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Risks"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits6"/>

        <TextView
            android:id="@+id/txtReadBenefits7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eligibility"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits8"/>

        <TextView
            android:id="@+id/txtReadBenefits9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits9"/>

        <TextView
            android:id="@+id/txtReadBenefits10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Before Donation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits8"/>

        <TextView
            android:id="@+id/txtReadBenefits12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits12"/>

        <TextView
            android:id="@+id/txtReadBenefits13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits13"/>

        <TextView
            android:id="@+id/txtReadBenefits14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits14"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="After Donation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtReadBenefits15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits15"/>

        <TextView
            android:id="@+id/txtReadBenefits16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits16"/>

        <TextView
            android:id="@+id/txtReadBenefits17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits17"/>

        <TextView
            android:id="@+id/txtReadBenefits18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits18"/>

        <TextView
            android:id="@+id/txtReadBenefits19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits19"/>

        <TextView
            android:id="@+id/txtReadBenefits20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:hint="@string/benefits20"/>

    </LinearLayout>
</ScrollView>